--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -5,16 +5,17 @@
             <div class="flex items-center justify-between gap-4">
                 <div class="flex items-center gap-4">
                     <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
-                    <p class="text-xl font-semibold">New Playlist</p>
+                    <p class="text-xl font-semibold">{{ isEditMode() ? 'Edit Playlist' : 'New Playlist' }}</p>
                 </div>
-                <div class="flex gap-4">
-                    <p-button label="Get Contents" icon="pi pi-tag" (onClick)="showContents.set(true)" />
-                    <p-button label="Save Playlist" icon="pi pi-save" (onClick)="onClickSave($event)" />
+                <div class="flex gap-2">
+                    <p-button label="Get Contents" icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" />
+                    <p-button label="Save Playlist" icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
                 </div>
             </div>
         </ng-template>
         <div class="grid grid-cols-1 md:grid-cols-12 gap-2 h-full mt-2">
-            <div class="col-span-1 md:col-span-6 xl:col-span-8 flex flex-col gap-2">
+            <div class="col-span-1 flex flex-col gap-2"
+                [ngClass]="{ 'md:col-span-6 xl:col-span-8': !isExpanded(), 'md:col-span-12': isExpanded() }">
 
                 <div class="grid grid-flow-row grid-cols-1 md:grid-cols-12 gap-4">
                     <div class="col-span-1 md:col-span-3">
@@ -47,10 +48,15 @@
                         group-hover:opacity-100 group-hover:translate-y-0 w-full bg-[var(--p-surface-300)]">
 
                         <div class="w-full flex flex-col justify-center gap-2 p-1">
-                            <p-button 
-                                [icon]="isPlaying() ? 'pi pi-stop-circle' : 'pi pi-play'" 
-                                [label]="isPlaying() ? 'Stop' : 'Play'" 
-                                (onClick)="onClickPlayPreview()" size="small" text />
+                            <div class="flex gap-2">
+                                <p-button 
+                                    [icon]="isPlaying() ? 'pi pi-stop-circle' : 'pi pi-play'" 
+                                    [label]="isPlaying() ? 'Stop' : 'Play'" 
+                                    (onClick)="onClickPlayPreview()" size="small" text />
+                                <p-button class="ml-auto" [icon]="!isExpanded() ? 'pi pi-window-maximize' : 'pi pi-window-minimize'" 
+                                    (onClick)="isExpanded.set(!isExpanded())"
+                                    size="small" [pTooltip]="isExpanded() ? 'Minimize' : 'Maximize'" tooltipPosition="bottom" text />
+                            </div>
                             <ng-container *ngIf="playlistService.currentContent() as currentContent">
                                 <p-progressbar [value]="playlistService.progress()" [showValue]="false"></p-progressbar>
                             </ng-container>
@@ -59,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="col-span-1 md:col-span-6 xl:col-span-4">
+            <div class="col-span-1 md:col-span-6 xl:col-span-4" [ngClass]="{ 'hidden': isExpanded() }">
                 <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg h-80 md:h-full">
                     <div class="p-3 flex items-center gap-2">
                         <p-inputgroup>
@@ -84,7 +90,7 @@
                                 <app-asset-list-item [asset]="item" />
                             } @empty {
                                 <div class="flex items-center justify-center h-full w-full" [ngClass]="{ 'col-span-3 ': assetViewModeSignal() == 'Grid' }">
-                                    <p class="text-gray-400 italic">No items found</p>
+                                    <p class="text-gray-400 italic">Click "Get Contents" to add contents</p>
                                 </div>
                             }
                         </div>
@@ -128,15 +134,19 @@
 </div>
 
 <p-dialog header="Select Contents" [(visible)]="showContents" [style]="{ width: '50rem', height: '520px' }" [draggable]="false" closable modal>
-    <app-playlist-select-contents [playListForm]="playListForm" (assetSelected)="filteredAssets.set($event)" />
+    <app-playlist-select-contents [playListForm]="playListForm" (assetSelected)="selectedAssets.set($event)" />
     <ng-template #footer>
         <div class="flex items-center w-full gap-2">
             @if (activeStep() > 1) {
-                <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" (onClick)="activeStep.set(1)" />
-                <p-button class="ml-auto" label="Complete" severity="success" icon="pi pi-check" iconPos="right" (onClick)="showContents.set(false)" />
+                <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" (onClick)="activeStep.set(1)" size="small" />
+                <p-button class="ml-auto" label="Complete" severity="success"
+                    icon="pi pi-check" iconPos="right" (onClick)="onClickComplete($event)" size="small" />
             } @else {
-                <p-button class="ml-auto" label="Next" icon="pi pi-arrow-right" (onClick)="activeStep.set(2)" />
+                <p-button class="ml-auto" label="Next" icon="pi pi-arrow-right" (onClick)="activeStep.set(2)" size="small" />
             }
         </div>
     </ng-template>
 </p-dialog>
+
+<p-toast />
+<p-confirmdialog />
