--- a/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
+++ b/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-8 mt-2" [formGroup]="audienceTagInputForm">
-    <div class="grid grid-cols-1 md:grid-cols-12 gap-2">
+    <div class="grid grid-cols-1 md:grid-cols-12 gap-2 items-center">
         <div class="col-span-1 md:col-span-5">
             <p-floatlabel variant="on">
                 <p-select [options]="audienceTagsLists()" optionLabel="name" optionValue="name" formControlName="category" appendTo="body" fluid />
@@ -13,7 +13,7 @@
             </p-floatlabel>
         </div>
         <div class="col-span-1 md:col-span-2">
-            <p-button label="Add" icon="pi pi-plus" (onClick)="onClickAddTag()" fluid />
+            <p-button label="Add" icon="pi pi-plus" (onClick)="onClickAddTag()" size="small" fluid />
         </div>
     </div>
     <p-table [value]="audienceTags" [scrollable]="true" scrollHeight="300px" size="small" stripedRows showGridlines>
@@ -34,6 +34,13 @@
                     <div class="flex flex-row justify-center">
                         <p-button icon="pi pi-trash" (onClick)="onClickRemoveTag(item)" severity="danger" text />
                     </div>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="3">
+                    <div class="flex justify-center items-center h-50">No audience tags found.</div>
                 </td>
             </tr>
         </ng-template>
