--- a/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-item-content/playlist-item-content.component.html
@@ -1,11 +1,12 @@
-<div class="relative w-[140px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group rounded-lg cursor-grab"
+<div class="relative w-[140px] h-full bg-[var(--p-surface-300)] flex items-center justify-center group cursor-grab"
     [ngClass]="{ 'shadow-lg shadow-red-600/70': currentPlaying() }">
-    <div class="absolute top-0 right-0 p-2 h-full w-full z-10 bg-gradient-to-t from-[var(--p-primary-500)] to-transparent ">
-        <div class="flex items-center justify-center h-full gap-2 hidden bg-gray-300" [ngClass]="{ 'group-hover:flex': !isPlaying()}">
+
+    <div class="absolute top-0 right-0 h-full w-full z-10 bg-gradient-to-t from-[var(--p-primary-500)] to-transparent ">
+        <div class="flex items-center justify-center h-full gap-2 hidden bg-gray-300/60" [ngClass]="{ 'group-hover:flex': !isPlaying()}">
             @if (!['video', 'audio'].includes(asset.type)) {
-                <p-button severity="info" icon="pi pi-cog" pTooltip="Configuration" tooltipPosition="bottom" (onClick)="showConfig.set(true)" />
+                <p-button severity="info" icon="pi pi-cog" pTooltip="Configuration" tooltipPosition="bottom" (onClick)="showConfig.set(true)" size="small" rounded />
             }
-            <p-button severity="danger" icon="pi pi-trash" pTooltip="Remove" tooltipPosition="bottom" (onClick)="onClickRemove(asset)" text />
+            <p-button severity="danger" icon="pi pi-trash" pTooltip="Remove" tooltipPosition="bottom" (onClick)="onClickRemove(asset)" size="small" rounded />
         </div>
     </div>
 
