--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-2 border-2 border-[var(--p-primary-100)] rounded-lg shadow shadow-xl h-40 w-full" cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
+<div class="flex flex-col gap-2 border-1 border-[var(--p-primary-100)] shadow shadow-xl h-40 w-full" cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
     
     <div class="flex-1 flex flex-col items-center justify-center gap-2 relative group rounded-lg ">
         <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
