--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -1,11 +1,13 @@
-<div class="flex flex-col gap-2 border-1 border-[var(--p-primary-100)] shadow shadow-xl h-40 w-full" cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
+<div class="flex flex-col gap-2 border-1 border-[var(--p-primary-100)] shadow shadow-xl h-40 w-full" 
+    cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
     
-    <div class="flex-1 flex flex-col items-center justify-center gap-2 relative group rounded-lg ">
+    <div class="flex-1 flex flex-col items-center justify-center gap-2 relative group rounded-lg">
         <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
             [currentContent]="asset" [showControls]="false" />
 
         @if(showDetails) {
-            <div class="flex items-end absolute bottom-0 left-0 h-full w-full bg-gradient-to-t from-[var(--p-primary-500)] to-transparent p-2 text-white">
+            <div class="flex items-end absolute bottom-0 left-0 h-full w-full bg-gradient-to-t from-[var(--p-primary-500)] to-transparent p-2 text-white"  
+                (click)="showOptions && showDrawer.set(true)" [ngClass]="{ 'cursor-pointer': showOptions }">
                 <div class="flex flex-col w-full">
                     <p class="text-sm line-clamp-1">{{ asset.name }}</p>
                     <p class="text-xs">{{ utils.formatSize(asset.fileDetails.size) }}</p>
@@ -23,3 +25,16 @@
         </div>
     </div>
 </div>
+
+
+<p-drawer header="Options" [(visible)]="showDrawer" position="bottom" [style]="{height: 'auto'}" appendTo="body">
+    <div class="flex gap-4">
+        <div class="flex flex-col w-full">
+            <p class="text-lg font-semibold line-clamp-1">{{ asset.name }}</p>
+            <p class="text-base">{{ utils.formatSize(asset.fileDetails.size) }}</p>
+        </div>
+        <div class="flex gap-2 ml-auto">
+            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: asset }"></ng-container>
+        </div>
+    </div>
+</p-drawer>
