--- a/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
+++ b/vcastplay-cms/src/app/pages/dashboard/dashboard.component.html
@@ -7,14 +7,16 @@
             label="Upgrade Subscription" 
             pTooltip="Purchase More Licenses"
             tooltipPosition="bottom" 
-            icon="pi pi-angle-double-up" />
+            icon="pi pi-angle-double-up"
+            size="small" />
         <p-button 
             class="md:hidden" 
             label="Upgrade" 
             severity="primary" 
             pTooltip="Purchase More Licenses" 
             tooltipPosition="bottom" 
-            icon="pi pi-angle-double-up" />
+            icon="pi pi-angle-double-up"
+            size="small" />
     </div>
     <div class="grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5">
         <p-card styleClass="h-full">
