--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -35,34 +35,8 @@
                 </div>
 
                 <!-- Preview Contents -->
-                <div class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg">
-                    <div class="flex h-80 md:h-full w-full justify-center items-center">
-                        <div class="relative transition-all duration-{{currentTransition?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
-                            <ng-container *ngIf="playlistService.currentContent() as currentContent">
-                                <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
-                                    [currentContent]="currentContent" [isPlaying]="isPlaying()" (timeUpdate)="onTimeUpdate($event)" [autoPlay]="true" />
-                            </ng-container>
-                        </div>
-                    </div>
-                    <div class="absolute bottom-0 z-50 flex opacity-0 translate-y-2 transition-all duration-300 
-                        group-hover:opacity-100 group-hover:translate-y-0 w-full bg-[var(--p-surface-300)]">
-
-                        <div class="w-full flex flex-col justify-center gap-2 p-1">
-                            <div class="flex gap-2">
-                                <p-button 
-                                    [icon]="isPlaying() ? 'pi pi-stop-circle' : 'pi pi-play'" 
-                                    [label]="isPlaying() ? 'Stop' : 'Play'" 
-                                    (onClick)="onClickPlayPreview()" size="small" text />
-                                <p-button class="ml-auto" [icon]="!isExpanded() ? 'pi pi-window-maximize' : 'pi pi-window-minimize'" 
-                                    (onClick)="isExpanded.set(!isExpanded())"
-                                    size="small" [pTooltip]="isExpanded() ? 'Minimize' : 'Maximize'" tooltipPosition="bottom" text />
-                            </div>
-                            <ng-container *ngIf="playlistService.currentContent() as currentContent">
-                                <p-progressbar [value]="playlistService.progress()" [showValue]="false"></p-progressbar>
-                            </ng-container>
-                        </div>
-                    </div>
-                </div>
+                 <app-playlist-preview class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg"
+                    [currentContent]="playlistService.currentContent()" />
             </div>
 
             <div class="col-span-1 md:col-span-6 xl:col-span-4" [ngClass]="{ 'hidden': isExpanded() }">
