--- a/vcastplay-cms/src/app/pages/playlist/playlist-list/playlist-list.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-list/playlist-list.component.html
@@ -15,8 +15,13 @@
                 [value]="playlistService.loadingSignal() ? utils.tableSkeletonRows : playlists()" 
                 selectionMode="single"
                 [scrollable]="true" 
+                [rows]="rows()"
+                [first]="first()"
+                scrollHeight="flex-1"
                 size="small"
+                (onPage)="playlistService.onPageChange($event)"
                 stripedRows
+                paginator
             >
                 <ng-template #header>
                     <tr>
@@ -50,12 +55,38 @@
                     </tr>
                 </ng-template>
             </p-table>
+
+            <div class="block lg:hidden">
+                
+            <div class="block lg:hidden flex flex-col gap-4">
+                @if (!playlistService.loadingSignal()) {
+                    @for (item of playlists(); track $index) {
+                        <app-playlist-list-item [playlist]="item" [actionBtn]="actionBtn" />
+                    } @empty {
+                        <div class="flex justify-center items-center p-5 h-100">
+                            <p>No playlists found</p>
+                        </div>
+                    }
+                } @else {
+                    @for (item of utils.tableSkeletonRows; track $index) {
+                        <p-skeleton height="5rem" />
+                    }
+                }
+            </div>
+            </div>
         </div>
-        <ng-template #footer>
-            <p-paginator [rows]="rows" [totalRecords]="totalRecords"></p-paginator>
-        </ng-template>
+        <!-- <ng-template #footer>
+            <p-paginator [first]="first" [rows]="rows()" [totalRecords]="totalRecords()"></p-paginator>
+        </ng-template> -->
     </p-card>
 </div>
+
+<p-dialog header="Preview" [(visible)]="showPreview" [style]="{ width: '50rem' }" modal>
+    <div class="flex justify-center h-80">
+        <app-playlist-preview class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg"
+            [currentContent]="playlistService.currentContent()" />
+    </div>
+</p-dialog>
 
 <ng-template #actionBtn let-item>
     <p-button icon="pi pi-pencil" (onClick)="onClickEdit(item)" pTooltip="Edit" tooltipPosition="bottom" severity="success" text />
