--- a/vcastplay-cms/src/app/components/playlist/playlist-preview/playlist-preview.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-preview/playlist-preview.component.html
@@ -6,16 +6,20 @@
         </ng-container>
     </div>
 </div>
-<div class="absolute bottom-0 z-50 flex opacity-0 translate-y-2 transition-all duration-300 
-    group-hover:opacity-100 group-hover:translate-y-0 w-full bg-[var(--p-surface-300)]">
 
-    <div class="w-full flex flex-col justify-center gap-2 p-1">
-        <div class="flex gap-2">
-            <p-button [icon]="isPlaying() ? 'pi pi-stop-circle' : 'pi pi-play'" [label]="isPlaying() ? 'Stop' : 'Play'" 
-                (onClick)="onClickPlayPreview()" size="small" text />
-        </div>
-        <ng-container *ngIf="currentContent">
-            <p-progressbar [value]="playlistService.progress()" [showValue]="false"></p-progressbar>
-        </ng-container>
+<div class="absolute top-0 left-0 w-full h-full flex items-center justify-center opacity-0 group-hover:opacity-100 z-60">
+    <div class="h-20 w-20 border-4 border-[var(--p-surface-200)] rounded-full opacity-70 
+        flex items-center justify-center hover:opacity-100 cursor-pointer" (click)="onClickPlayPreview()">
+        <i class="text-[var(--p-surface-200)] pi" [ngClass]="{ 'pi-pause': isPlaying(), 'pi-play': !isPlaying() }" style="font-size: 2rem;"></i>
     </div>
 </div>
+
+<ng-container *ngIf="currentContent">
+    <div class="absolute bottom-0 z-50 flex opacity-0 translate-y-2 transition-all duration-300 
+        group-hover:opacity-100 group-hover:translate-y-0 w-full bg-[var(--p-surface-300)]">
+
+        <div class="w-full flex flex-col justify-center gap-2 p-1">
+            <p-progressbar [value]="playlistService.progress()" [showValue]="false"></p-progressbar>
+        </div>
+    </div>
+</ng-container>
