--- a/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list/asset-list.component.html
@@ -65,7 +65,7 @@
                     </tr>
                 </ng-template>
                 <ng-template #body let-item>
-                    <tr>
+                    <tr class="text-sm">
                         <td>
                             <div class="relative h-15">
                                 <div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
