--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -3,13 +3,21 @@
     <p-card styleClass="h-full" class="flex-1" [formGroup]="playListForm" cdkDropListGroup>
         <ng-template #title>
             <div class="flex items-center justify-between gap-4">
-                <div class="flex items-center gap-4">
+                <div class="flex items-center gap-2">
                     <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
-                    <p class="text-xl font-semibold">{{ isEditMode() ? 'Edit Playlist' : 'New Playlist' }}</p>
+                    <p class="text-sm md:text-xl font-semibold">{{ isEditMode() ? 'Edit Playlist' : 'New Playlist' }}</p>
+                    @if (isEditMode()) {
+                        <p-tag [value]="formControl('status').value" [icon]="'pi ' + utils.getIcon(formControl('status').value)"
+                            [severity]="utils.getStatus(formControl('status').value)" />
+                    }
                 </div>
-                <div class="flex gap-2">
+                <div class="hidden md:flex gap-2">
                     <p-button label="Get Contents" icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" />
                     <p-button label="Save Playlist" icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
+                </div>
+                <div class="flex md:hidden gap-2">
+                    <p-button icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" />
+                    <p-button icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
                 </div>
             </div>
         </ng-template>
@@ -25,12 +33,16 @@
                                 [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
                         </p-floatlabel>
                     </div>
-                    <div class="col-span-1 md:col-span-9">
-                        <p-floatlabel variant="on">
-                            <label for="description">Description</label>
-                            <input id="description" pInputText formControlName="description"
-                                [ngClass]="{ 'ng-invalid ng-dirty': formControl('description').invalid && formControl('description').touched }" fluid />
-                        </p-floatlabel>
+                    <div class="col-span-1 md:col-span-9 flex justify-between gap-2">
+                        <div class="w-full">
+                            <p-floatlabel variant="on">
+                                <label for="description">Description</label>
+                                <input id="description" pInputText formControlName="description"
+                                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('description').invalid && formControl('description').touched }" fluid />
+                            </p-floatlabel>
+                        </div>
+                        <p-button [icon]="!isExpanded() ? 'pi pi-times' : 'pi pi-image'" pTooltip="Contents" tooltipPosition="bottom"
+                            (onClick)="isExpanded.set(!isExpanded())" outlined />
                     </div>
                 </div>
 
@@ -73,12 +85,12 @@
             </div>
         </div>
         <ng-template #footer>
-            <div class="grid grid-rows-2 md:flex w-full items-center gap-2 py-2">
+            <div class="grid grid-cols-1 md:grid-cols-3 md:flex w-full items-center gap-2 py-2">
                 <div class="flex items-center gap-2">
                     <p-checkbox formControlName="loop" inputId="loop" binary />
                     <label for="loop" class="text-sm">Loop Video</label>
                 </div>
-                <div class="flex items-center gap-4" formGroupName="transition">
+                <div class="flex flex-col md:flex-row md:items-center gap-4" formGroupName="transition">
                     <div class="flex items-center gap-2">
                         <p-checkbox formControlName="hasGap" inputId="hasGap" binary />
                         <label for="hasGap" class="text-sm">Black Gap</label>
