--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -24,7 +24,7 @@
         </ng-template>
 
         <div class="flex flex-col gap-2 pt-4 h-200 md:h-full" [formGroup]="assetForm">
-            <div class="grid grid-cols-1 md:grid-cols-12 gap-2">
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4 md:gap-2">
                 <div class="col-span-1 md:col-span-2">
                     <p-floatlabel variant="on">
                         <p-select inputId="type" [options]="assetTypes()" optionLabel="label" optionValue="value" 
